# qfirehose

./: Android.mk  BUILD.gn  CMakeLists.txt  Makefile  Makefile.am  NOTICE  QFirehose  ReleaseNote.txt  configure.ac  firehose_protocol.c  meson.build  qfirehose.c  usb_linux.c  usb_linux.h
android/arm64-v8a/: QFirehose
android/armeabi-v7a/: QFirehose
log/: MCU_local.log.txt  MCU_remote.log.txt
